update: code-along.html

--- a/Module-1/code-along.html
+++ b/Module-1/code-along.html
@@ -29,6 +29,37 @@
 <h2 id="please-dont-1">I told you not to click</h2>
 <a href="mailto:kylefranzrodriguez@gmail.com">Don't email me</a>
 
+<table>
+    <caption>Monthly Sales</caption>
+    <thead>
+      <tr>
+        <th>Month</th>
+        <th>Sales</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>January</td>
+        <td>$10,000</td>
+      </tr>
+      <tr>
+        <td>February</td>
+        <td>$12,000</td>
+      </tr>
+      <tr>
+        <td>March</td>
+        <td>$15,000</td>
+      </tr>
+    </tbody>
+    <tfoot>
+      <tr>
+        <td>Total</td>
+        <td>$37,000</td>
+      </tr>
+    </tfoot>
+    <summary>This table shows the monthly sales figures for the first quarter of the year.</summary>
+  </table>
+
 </body>
 
 </html>
